[metadata]
name = contractor
summary = Cloud Environment Builder
description-file =
    README.rst
author = HP Cloud Services DNSaaS
author-email = dnsaas@hp.com
home-page = http://www.example.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    contractor

[entry_points]
console_scripts =
    contractor = contractor.cmd.contractor:main

contractor.tasks =
    neutron-router = contractor.task.neutron:RouterTask
    neutron-network = contractor.task.neutron:NetworkTask
    neutron-subnet = contractor.task.neutron:SubnetTask
    neutron-router-interface = contractor.task.neutron:RouterInterfaceTask

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = contractor/locale
domain = contractor

[update_catalog]
domain = contractor
output_dir = contractor/locale
input_file = contractor/locale/contractor.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = contractor/locale/contractor.pot
